       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. Document.cookie= does not restrict the cookie by path and domain


Revision History:
25-Dec-2002
Notes:
    get...WithID was incorrectly doing case insensitive matches.  It is now case-sensitive, since that is the way the
    ID attribute is defined.

24-Dec-2002
Additions:
    HTMLParserFactory now supports methods to explicitly select the parser without playing with the class path.
    This includes support for additional parsers not bundled with HttpUnit.

22-Dec-2002
    Thanks to John Sinclair for noting the lack of line breaks in manifest.mf and proposing a fix

Problems fixed:
    The manifest.mf file now has line breaks between properties

19-Dec-2002
    Thanks to Bernhard Wagner for adding some parser customization code.

Additions:
    You may call HTMLParserFactory.setPreserveTagCase and setReturnHTMLDocument to control whether the parser coerces
    the case of tags and attributes or returns a HTMLDocument object, respectively.

18-Dec-2001
Acknowledgements:
    Thanks to Bernhard Wagner for simplifying some string comparison code in ParsedHTML and WebTable

18-Dec-2002 1.5.1

Acknowledgements:
    Thanks to Geert Bevin for fixing a problem with comparing cookies
    Thanks to Troy Waldrep for pointing out the non-standard Refresh header definition accepted in popular browsers
    Thanks to Raul Benito Garcia for pointing out the problem with no-action forms accessed with URL parameters
    Thanks to Larry Hamel for supplying an ant target to run Example.java
    Thanks to Charles Mendis for finding the bug in the proxy support
    Thanks to Michael McCallum for adding handling for bad character-set headers and an ant target to build the examples
    Thanks to Neville Wylie for catching the top.parent and frame name index problems

Problems Fixed: